--- a/main.css
+++ b/main.css
@@ -17,8 +17,8 @@ h3{
 	color:blue;
 }
 img {
-	display: block;
-  margin-left: auto;
-  margin-right: auto;
   width: 33%;
+}
+div {
+	text-align: center;
 }
